BPER/DEVF/force-app/main/default/objects/MiniWallet__c/MiniWallet__c.object-meta.xml
<CustomObject>
    <label>MiniWallet</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>MiniWallet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MiniWallets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>