BPER/DEVF/force-app/main/default/objects/MiniWallet__c/fields/PTF_Area__c.field-meta.xml
<CustomField>
    <fullName>PTF_Area__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; PTF_Portafoglio__r.PTF_Area__c, PTF_Portafoglio__r.PTF_Area__r.Name,&apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Area</label>
    <type>Text</type>
</CustomField>