BPER/DEVF/force-app/main/default/objects/MiniWallet__c/fields/PTF_Banca__c.field-meta.xml
<CustomField>
    <fullName>PTF_Banca__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; PTF_Portafoglio__r.PTF_Banca__c, PTF_Portafoglio__r.PTF_Banca__r.Name ,&apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Banca</label>
    <type>Text</type>
</CustomField>