BPER/DEVF/force-app/main/default/objects/MiniWallet__c/fields/PTF_Capofila__c.field-meta.xml
<CustomField>
    <fullName>PTF_Capofila__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; PTF_Portafoglio__r.PTF_Capofila__c, PTF_Portafoglio__r.PTF_Capofila__r.Name ,&apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capofila</label>
    <type>Text</type>
</CustomField>