BPER/DEVF/force-app/main/default/objects/MiniWallet__c/fields/PTF_Codice_Miniportafoglio__c.field-meta.xml
<CustomField>
    <fullName>PTF_Codice_Miniportafoglio__c</fullName>
    <formula>PTF_Portafoglio__r.PTF_Codice_Portafoglio__c  &amp;   MID(Name, 19, 6)</formula>
    <label>Codice Miniportafoglio</label>
    <type>Text</type>
</CustomField>