BPER/DEVF/force-app/main/default/objects/MiniWallet__c/fields/PTF_DirezioneRegionale__c.field-meta.xml
<CustomField>
    <fullName>PTF_DirezioneRegionale__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; PTF_Portafoglio__r.PTF_DirezioneRegionale__c, PTF_Portafoglio__r.PTF_DirezioneRegionale__r.Name ,&apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DR</label>
    <type>Text</type>
</CustomField>