BPER/DEVF/force-app/main/default/objects/MiniWallet__c/fields/PTF_Filiale__c.field-meta.xml
<CustomField>
    <fullName>PTF_Filiale__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; PTF_Portafoglio__r.PTF_Filiale__c ,PTF_Portafoglio__r.PTF_Filiale__r.Name ,&apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Filiale</label>
    <type>Text</type>
</CustomField>