BPER/DEVF/force-app/main/default/objects/MiniWallet__c/fields/PTF_FilialeFormula__c.field-meta.xml
<CustomField>
    <fullName>PTF_FilialeFormula__c</fullName>
    <formula>TEXT(VALUE(PTF_Portafoglio__r.PTF_ABI__c)) +PTF_Portafoglio__r.PTF_Filiale__r.PTF_IdCEDFiliale__c</formula>
    <label>Filiale Formula</label>
    <type>Text</type>
</CustomField>