BPER/DEVF/force-app/main/default/objects/MiniWallet__c/fields/PTF_Matricola_Referente__c.field-meta.xml
<CustomField>
    <fullName>PTF_Matricola_Referente__c</fullName>
    <formula>Referente__r.PTF_RegistrationNumber__c</formula>
    <label>Matricola Referente</label>
    <type>Text</type>
</CustomField>