BPER/DEVF/force-app/main/default/objects/MiniWallet__c/fields/PTF_Nome_Referente__c.field-meta.xml
<CustomField>
    <fullName>PTF_Nome_Referente__c</fullName>
    <formula>Referente__r.FirstName+ &apos; &apos;+ Referente__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome Referente</label>
    <type>Text</type>
</CustomField>