BPER/DEVF/force-app/main/default/objects/MiniWallet__c/fields/PTF_Portafoglio__c.field-meta.xml
<CustomField>
    <fullName>PTF_Portafoglio__c</fullName>
    <label>Portafoglio Padre</label>
    <referenceTo>Wallet__c</referenceTo>
    <relationshipLabel>MiniWallets</relationshipLabel>
    <relationshipName>MiniWallets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>