BPER/DEVF/force-app/main/default/objects/MiniWallet__c/fields/PTF_SL__c.field-meta.xml
<CustomField>
    <fullName>PTF_SL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sportello Leggero</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>MiniWallets</relationshipLabel>
    <relationshipName>MiniWallets</relationshipName>
    <type>Lookup</type>
</CustomField>