BPER/DEVF/force-app/main/default/objects/MiniWallet__c/fields/PTF_SL_Active__c.field-meta.xml
<CustomField>
    <fullName>PTF_SL_Active__c</fullName>
    <formula>IF(ISBLANK(PTF_SL__r.PTF_DataChiusura__c), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sportello Leggero Attivo</label>
    <type>Checkbox</type>
</CustomField>