BPER/DEVF/force-app/main/default/objects/MiniWallet__c/fields/Referente__c.field-meta.xml
<CustomField>
    <fullName>Referente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referente Principale</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>MiniWallets</relationshipLabel>
    <relationshipName>MiniWallets</relationshipName>
    <type>Lookup</type>
</CustomField>